[package]
name = "gjson"
version = "0.1.0"
authors = ["importcjj <importcjj@gmail.com>"]
license = "MIT"
description = "JSON Parser for Rust - Get JSON values quickly"
keywords = ["json", "json-parser", "gjson"]
categories = ["encoding"]
readme = "README.md"
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE-MIT"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"

[dev-dependencies]
criterion = "0.2"
json = "0.11.13"
serde_json = "1.0"

[[bench]]
name = "gjson_benchmark"
harness = false